<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_order_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.countach.cti.OrderCalculator">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="191dp"
        android:text="@string/vodka_soda_r25_shot"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        tools:layout_constraintLeft_creator="1"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="294dp"
        android:text="@string/parking_r5_hour"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        tools:layout_constraintLeft_creator="1"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="101dp"
        android:text="@string/pizza_r20_slice"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        tools:layout_constraintLeft_creator="1"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="58dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="65dp"
        app:layout_constraintTop_toTopOf="@+id/editText5"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="34dp"
        android:text="@string/total_spent"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        tools:layout_constraintLeft_creator="1"/>

    <EditText
        android:id="@+id/editText5"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/number_of_hours"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.713"
        tools:ignore="SmallSp"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"/>

    <EditText
        android:id="@+id/editText7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="238dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="238dp"
        android:ems="10"
        android:hint="@string/number_of_shots"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <EditText
        android:id="@+id/editText6"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginBottom="65dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:hint="@string/number_of_slices"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/editText7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:ignore="SmallSp"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>
</android.support.constraint.ConstraintLayout>
